update post: Create Subnet

--- a/cm1yy5234000809kx90jf8z6k.md
+++ b/cm1yy5234000809kx90jf8z6k.md
@@ -46,8 +46,8 @@ tags: cloud, aws, cloud-computing, amazon-web-services, vpc, subnet
     
     You have sucessfully created 1 subnet: subnet-01f0318127e88fac4
     
-8. ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1728301436992/172e61b2-9551-41c5-ae02-1a2e115b1790.png align="center")
-    
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1728301436992/172e61b2-9551-41c5-ae02-1a2e115b1790.png align="right")
 
 #happylearning
 
