update post: Create Subnet

--- a/cm1yy5234000809kx90jf8z6k.md
+++ b/cm1yy5234000809kx90jf8z6k.md
@@ -10,12 +10,12 @@ tags: cloud, aws, cloud-computing, amazon-web-services, vpc, subnet
 
 ---
 
-### Tasks:
+### Tasks
 
 * For this task, create one subnet named `xfusion-subnet` under default VPC.
     
 
-### Steps:
+### Steps
 
 1. We already have some 6 subnets here:
     
