update post: Create Key Pair

--- a/cm1ysy368000109k12died0mt.md
+++ b/cm1ysy368000109k12died0mt.md
@@ -13,7 +13,7 @@ tags: ec2, aws, amazon-web-services, keypair, ssh-key-pair-for-ec2
 
 ## Table of contents
 
-### Tasks:
+### Tasks
 
 For this task, create a key pair with the following requirements:
 
@@ -22,7 +22,7 @@ For this task, create a key pair with the following requirements:
 * Key pair type must be rsa
     
 
-### Steps:
+### Steps
 
 1. Find the services 'Key pairs'.
     
