update post: Setting Up an Application Load Balancer for an EC2 Instance

--- a/cm453z8bk000609magib625jj.md
+++ b/cm453z8bk000609magib625jj.md
@@ -88,9 +88,9 @@ tags: cloud, ec2, aws, amazon-web-services, alb, load-balancing
     
 13. ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1733026395126/0374af96-7367-4008-8f9e-ab67c5cbec66.png align="center")
     
-    **Security group (**[**sg-097258aa3bafd5395 | xfusion-sg**](https://us-east-1.console.aws.amazon.com/ec2/home?region=us-east-1#SecurityGroup:groupId=sg-097258aa3bafd5395)[**) was created successfully**](https://us-east-1.console.aws.amazon.com/ec2/home?region=us-east-1#SecurityGroup:groupId=sg-097258aa3bafd5395)
+    **Security group (**[**sg-097258aa3bafd5395 | xfusion-sg) was created successfully**](https://us-east-1.console.aws.amazon.com/ec2/home?region=us-east-1#SecurityGroup:groupId=sg-097258aa3bafd5395)
     
-    [](https://us-east-1.console.aws.amazon.com/ec2/home?region=us-east-1#SecurityGroup:groupId=sg-097258aa3bafd5395)EC2 → Security Groups → sg-097258aa3bafd5395 - xfusion-sg
+    EC2 → Security Groups → sg-097258aa3bafd5395 - xfusion-sg
     
 14. ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1733026936389/c7c89673-f984-4086-9437-8475e8299bc1.png align="center")
     
@@ -128,7 +128,7 @@ tags: cloud, ec2, aws, amazon-web-services, alb, load-balancing
     
     ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1733027534918/5bac7b36-733f-4fab-8899-1ef3f5e2b13b.png align="center")
     
-    ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1733027554306/f582385b-c47a-4755-b78f-3006cfecc93c.png align="center")
+    ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1733027872450/7332af85-62f6-4ddc-89c9-db7e57be730b.png align="center")
     
 
 Boom!! We finally did this: Setting Up an Application Load Balancer for an EC2 Instance. :)
