update post: Access Ubuntu Server Shell Using GitHub Actions

--- a/cm29dh9d000000al46hdo8g93.md
+++ b/cm29dh9d000000al46hdo8g93.md
@@ -30,9 +30,7 @@ tags: linux, github, github-actions-1, linux-for-beginners, linux-basics
     Repo name - Random  
     Make sure to set it to public; choosing private will incur a charge.
     
-    [![asciicast](https://asciinema.org/a/8opRFUmzhZQf3boxRG3d17UR1.svg align="left")](https://asciinema.org/a/8opRFUmzhZQf3boxRG3d17UR1)
-    
-    ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1728930354881/68cfa95c-8d6c-425d-8fcd-616fa63db55b.png align="center")
+    [![](https://asciinema.org/a/8opRFUmzhZQf3boxRG3d17UR1.svg align="left")](https://asciinema.org/a/8opRFUmzhZQf3boxRG3d17UR1)
     
 3. Now we have our own repo. Assuming you also have your own repo.
     
